# electryon

./: Cargo.toml  README.md
BusinessPool/: .env
BusinessPool/MainPoolContract/: BusinessRegistry.rs  StakingLogic.rs
client/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/app/: dummy_data.tsx  root.tsx  tailwind.css
client/app/components/: board.tsx  buttons.tsx  cards.tsx  header.tsx  icons.tsx  searchBar.tsx  sidebar.tsx  userInfo.tsx
client/app/contexts/: walletProvider.tsx
client/app/cookies/: auth.tsx
client/app/routes/: _app.dashboard.tsx  _app.partners.$partner.tsx  _app.partners.tsx  _app.play.tsx  _app.settings.tsx  _app.tsx  _auth.login.tsx  _auth.register.tsx  _auth.tsx  _index.tsx  api.roll-dice.tsx  api.updatePreferences.tsx  logout.tsx  pages.tsx  roll-dice.tsx  toggleSidebar.tsx
client/app/types/: board.ts  database.ts  partner.tsx
client/app/utils/: cookies.tsx  db.server.ts  nft.server.ts  solana.server.ts
client/public/nft-assets/metadata/: 4e6058c149bcb47188fdd7823a0cefbb-metadata.json  73668a8386c57fcbcc274311e49dd460-metadata.json  7f09edd38a1c86286ec7804aa1a324eb-metadata.json  d5a9944794464f3587460d5aca2b433b-metadata.json
client/scripts/: read_keypair.ts
coin/: Cargo.toml  README.md  vault_init.ts
coin/src/: error.rs  lib.rs  processor.rs  state.rs
src/: lib.rs  state.rs
