[package]
name = "game-token"
version = "0.1.0"
edition = "2024"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0"
spl-token = { version = "4.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "2.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]